--- a/HR_Project/HR_Project.Presentation/Views/Home/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Home/Index.cshtml
@@ -30,6 +30,7 @@
  *@
 
  @using System.Security.Claims;
+ @inject IHttpContextAccessor httpContextAccessor
 
 
 @{
@@ -135,7 +136,7 @@
             <hr />
             <p>Onaylanması Gerekenler</p>
             <div class="row">
-                @if (User.IsInRole("CompanyManager"))
+                @if (httpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.UserData).Value=="Manager")
                 {
                     <!-- absence for manager card  -->
                     <div class="col-xl-3 col-md-6 mb-4">
