--- a/HR_Project/HR_Project.Presentation/Views/Advance/Create.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Create.cshtml
@@ -28,7 +28,7 @@
            
             <div class="form-group">
                 <label asp-for="Amount" class="control-label">Miktar</label>
-                <input asp-for="AmountString" class="form-control" />
+                <input asp-for="Amount" class="form-control" />
                 <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
 
